Fix padding in movie info table to align top properly

--- a/css/main.css
+++ b/css/main.css
@@ -338,7 +338,7 @@ p.error {
     font-size: 14px;
     vertical-align: top;
     margin-top: 0;
-    padding: 4px 0;
+    padding: 0 0 8px 0;
     margin-bottom: 2px;
 }
 
